# burring_back

./: .gitignore  .pylintrc  README.md  mypy.ini  owkin_technical_test.postman_collection.json  pyproject.toml  run.sh  tox.ini
db/: init_db.py
src/: app.py  config.py
src/owkin/blurring/: process.py
src/owkin/models/: input.py  output.py  run.py
src/owkin/repository/: runs.py
test/blurring/: test_blurring_process.py  test_json_reader.py  test_repository.py
test/files/: Lenna_image.txt  test_encode_image.py  voiture_image.txt
test/input/: input-lenna-bee.json
test/response/: response.json
tests/blurring/: test_blurring_process.py  test_json_reader.py
tests/files/: bumblebee_image.txt  test_encode_image.py
