[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[project]
name = "blurring-back"
description = "Let's get hired by Owkin"
readme = "README.md"
license = {text = "MIT License"}
authors = [
    {name = "Olivier Caille", email = "caille-olivier@live.com"},
]
requires-python = ">= 3.10"
dependencies = [
    "Pillow==9.5.0",
    "Flask==2.2.2",
    "connexion==2.14.2",
    "flask-marshmallow==0.15.0",
    "marshmallow-sqlalchemy==0.29.0"
]

version = "1.0.0.dev1"

[project.optional-dependencies]
test = [
    "pytest==7.1.3",
    "black==22.10.0",
    "tox==3.26.0",
    "pylint==2.4.4",
    "pytest-env==0.6.2"
]
[tool.pytest.ini_options]
pythonpath = [
    ".", "src","test"
]
env = [
    "TEST_DIRECTORY = ."
]
log_cli = 1
